--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+      }
+      .section {
+        margin-bottom: 20px;
+      }
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="portfolio">
+      <h1>My Portfolio</h1>
+      <div class="section" id="personal-info"></div>
+      <div class="section">
+        <h2>Skills</h2>
+        <ul id="skills"></ul>
+      </div>
+      <div class="section">
+        <h2>Certifications</h2>
+        <ul id="certifications"></ul>
+      </div>
+    </div>
+
+    <script>
+      async function fetchContent() {
+        try {
+          const response = await fetch("http://localhost:5000/api/content");
+          const data = await response.json();
+          const portfolio = document.getElementById("portfolio");
+
+          // Find personal info
+          const personal = data.find((item) => item.type === "personal");
+          if (personal) {
+            const personalInfo = document.getElementById("personal-info");
+            personalInfo.innerHTML = `
+            <h2>${personal.data.name || "Unnamed"}</h2>
+            <p>${personal.data.bio || "No bio available"}</p>
+            ${
+              personal.data.photoUrl
+                ? `<img src="${personal.data.photoUrl}" alt="Profile Photo" width="150">`
+                : ""
+            }
+            <p><a href="${
+              personal.data.contactLinks?.github || "#"
+            }">GitHub</a></p>
+            <p><a href="${
+              personal.data.contactLinks?.linkedin || "#"
+            }">LinkedIn</a></p>
+          `;
+          }
+
+          // Display skills
+          const skills = data.filter((item) => item.type === "skill");
+          const skillsList = document.getElementById("skills");
+          skills.forEach((skill) => {
+            const li = document.createElement("li");
+            li.textContent = skill.data.name;
+            skillsList.appendChild(li);
+          });
+
+          // Display certifications
+          const certs = data.filter((item) => item.type === "cert");
+          const certsList = document.getElementById("certifications");
+          certs.forEach((cert) => {
+            const li = document.createElement("li");
+            li.textContent = `${cert.data.name} (${
+              cert.data.issuer || "No issuer"
+            } - ${cert.data.date || "No date"})`;
+            certsList.appendChild(li);
+          });
+        } catch (error) {
+          console.error("Error fetching content:", error);
+          document.getElementById("portfolio").innerHTML =
+            "<p>Error loading portfolio. Check console for details.</p>";
+        }
+      }
+
+      // Fetch content when the page loads
+      window.onload = fetchContent;
+    </script>
   </body>
 </html>
